# lua-obfuscator

./: CMakeLists.txt  config.ini
src/: LuaObfuscator.cpp  LuaObfuscator.hpp  main.cpp
src/components/: ConfigParser.cpp  ConfigParser.hpp  Logger.cpp  Logger.hpp  ProgressBar.cpp  ProgressBar.hpp
src/components/protections/: Compression.cpp  Compression.hpp  ControlFlow.cpp  ControlFlow.hpp  JunkCode.cpp  JunkCode.hpp  StringEncryption.cpp  StringEncryption.hpp  VMProtection.cpp  VMProtection.hpp
